--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+# ==========================
+# ? CONFIGURAÇÃO DO PROJETO
+# ==========================
 spring.application.name=SistemaDeEstoque
+
+# ==========================
+# ?? CONFIGURAÇÃO DO BANCO MYSQL
+# ==========================
+spring.datasource.url=jdbc:mysql://localhost:3306/sistema_estoque?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=252426cd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ==========================
+# ?? JPA / HIBERNATE
+# ==========================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
