Criação de package e arquivo categoria.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.application.name=SistemaDeEstoque
 # ?? CONFIGURAÇÃO DO BANCO MYSQL
 # ==========================
 # O 'driver-class-name' não é necessário, o Spring Boot detecta sozinho.
-spring.datasource.url=jdbc:mysql://localhost:3306/sistema_estoque?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/
 spring.datasource.username=root
-spring.datasource.password=252426cd
+spring.datasource.password=jvms2006
 
 # ==========================
 # ?? JPA / HIBERNATE
